--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^4.76.3",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.15.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
