--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
+    "stripe": "^17.7.0",
     "tesseract.js": "^5.1.1"
   },
   "devDependencies": {
